fix plus sign alignment, chang preview area to a card, add dynamic title output for preview area

--- a/static/css/sitewide.css
+++ b/static/css/sitewide.css
@@ -22,17 +22,6 @@
 
 }
 
-.corpus-card-icon .fa {
-  position: relative ;
-  top: 52px;
-  left: 33px;
-  font-size: 16px;
-  color: cyan;
-
-}
-
-}
-
 .card-block {
     min-height: 100px;
 }
